# Ragas

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/ragas/: results.html  results.json
artifacts/ragas/live/: results.html  results.json
artifacts/ragas/mock/: results.html  results.json
examples/: article.txt
src/summarizer/: __init__.py  evaluator.py  metrics.py  ragas_pipeline.py  service.py  telemetry.py
tests/: goldens.json  test_ragas_pipeline.py  test_summarizer.py
