[project]
name = "summarizer-quality-demo"
version = "0.1.0"
description = "OpenAI text summarization with Ragas quality evaluation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0.0",
    "langchain-openai>=0.3.0",
    "openai>=1.50.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.2.0",
    "transformers>=4.45.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
